AP-22303: Rework resolving function/aggregation arguments
AP-22303 (Add support for more complex function/aggregation signatures)